--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
     "require": {
         "php": ">=7.1.3",
         "fideloper/proxy": "~4.0",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "5.8.*",
         "laravel/tinker": "~1.0",
-        "tymon/jwt-auth": "dev-develop"
+        "tymon/jwt-auth": "1.0.0-rc.4.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
