--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,27 @@
-sudo: required
 language: php
-dist: trusty
-
-addons:
-  chrome: stable
-
-php:
-  - 7.1
 
 services:
-  - mysql
+    - docker
+
+php:
+    - 7.2
+
+dist: trusty
+
+sudo: required
 
 before_install:
-  - mysql -e 'CREATE DATABASE laravel_vue_spa;'
+    - cp .env.dusk.local .env
+    - docker-compose build
+    - docker-compose up -d
+    - docker exec -it richwholesale.local composer install --no-interaction
+    - docker exec -it richwholesale.local php artisan migrate --seed
+    - npm install
+    - npm run production
 
-install:
-  - cp .env.dusk.testing .env
-  - travis_retry composer install --no-interaction --prefer-dist --no-suggest
-  - npm install
-  - npm run production
-
-before_script:
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-  - php artisan serve &
 
 script:
-  - php artisan dusk
-  - vendor/bin/phpunit
+    - docker exec -it richwholesale.local vendor/bin/phpunit
 
 notifications:
-  email: false
+    email: false
