--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vuetify": "^1.5.11",
     "vuex": "^3.1.0",
     "vuex-persistedstate": "^2.5.4",
-    "vuex-router-sync": "^5.0.0"
+    "vuex-router-sync": "^5.0.0",
+    "webpack-dev-server": "^3.3.1"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -33,7 +34,7 @@
     "eslint": "^3.19.0",
     "eslint-plugin-html": "^3.2.2",
     "eslint-plugin-vue-libs": "^1.2.1",
-    "laravel-mix": "^2.1.14",
+    "laravel-mix": "^4.0.15",
     "standard": "^10.0.3",
     "stylint": "^1.5.9",
     "stylus": "^0.54.5",
