--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -5,7 +5,7 @@ APP_LOG_LEVEL=debug
 APP_URL=http://127.0.0.1:8000
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=richwholesale
 DB_USERNAME=root
