--- a/.env.dusk.testing
+++ b/.env.dusk.testing
@@ -5,11 +5,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://127.0.0.1:8000
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel_vue_spa
+DB_DATABASE=richwholesale
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
