--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ APP_URL=http://richwholesale.local
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=richwholesale
 DB_USERNAME=root
