--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_install:
 install:
     - docker exec -it richwholesale.local composer install --no-interaction
     - docker exec -it richwholesale.local php artisan migrate:fresh --seed
-    - npm install
-    - npm run production
+    - docker exec -it richwholesale.local npm install
+    - docker exec -it richwholesale.local npm run production
 
 script:
     - docker exec -it richwholesale.local vendor/bin/phpunit
