--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,11 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
+        ],
+        "compile": [
+          "php artisan migrate:fresh --seed",
+          "npm install",
+          "npm run production"
         ]
     },
     "config": {
