--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
+language: php
+
+php:
+    - 7.2
+
+dist: trusty
+
 sudo: required
 
 services:
@@ -5,7 +12,7 @@ services:
 
 before_install:
     - sudo /etc/init.d/mysql stop
-    - cp .env.dusk.local .env
+    - cp .env.travis .env
     - docker-compose build
     - docker-compose up -d
     - docker ps -a
