--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "standard --plugin html resources/assets/js/**/* --fix"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.3",
     "axios": "^0.17.1",
     "js-cookie": "^2.2.0",
     "vee-validate": "^2.2.2",
@@ -27,9 +28,9 @@
     "webpack-dev-server": "^3.3.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "cross-env": "^5.2.0",
     "eslint": "^3.19.0",
     "eslint-plugin-html": "^3.2.2",
