--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "lint": "standard --plugin html resources/assets/js/**/* --fix"
+    "lint": "standard --plugin html resources/assets/js/**/* --fix",
+    "postinstall": "npm run prod"
+  },
+  "engines": {
+    "node": "7.6.0",
+    "yarn": "0.21.3"
   },
   "dependencies": {
     "@babel/runtime": "^7.4.3",
