--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@babel/runtime": "^7.4.3",
     "axios": "^0.17.1",
     "js-cookie": "^2.2.0",
-    "vee-validate": "^2.2.2",
+    "vee-validate": "^2.2.3",
     "vform": "^1.0.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.10.0",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.4.3",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "cross-env": "^5.2.0",
     "eslint": "^3.19.0",
     "eslint-plugin-html": "^3.2.2",
