--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "webpack-dev-server": "^3.3.1"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
+    "@babel/plugin-transform-async-to-generator": "^7.4.0",
     "@babel/plugin-transform-runtime": "^7.4.3",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "cross-env": "^5.2.0",
     "eslint": "^3.19.0",
     "eslint-plugin-html": "^3.2.2",
