--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,7 @@
         ],
         "compile": [
             "php artisan jwt:secret",
+            "php artisan clear-compiled && php artisan optimize",
             "php artisan migrate"
         ]
     },
