--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,13 @@
-language: php
-
-php:
-    - 7.2
-
-dist: trusty
-
 sudo: required
 
 services:
     - docker
 
 before_install:
-    - sudo /etc/init.d/mysql stop
+    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+    - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+    - sudo apt-get update
+    - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce nodejs npm
     - cp .env.travis .env
     - docker-compose build
     - docker-compose up -d
