--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
             - docker-ce
 
 before_install:
+    - sudo service mysql stop
     - cp .env.travis .env
     - docker-compose build
     - docker-compose up -d
