--- a/package.json
+++ b/package.json
@@ -36,11 +36,14 @@
     "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
     "@babel/plugin-transform-async-to-generator": "^7.4.0",
     "@babel/plugin-transform-runtime": "^7.4.3",
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "@mdi/font": "^3.6.95",
     "cross-env": "^5.2.0",
     "eslint": "^3.19.0",
     "eslint-plugin-html": "^3.2.2",
     "eslint-plugin-vue-libs": "^1.2.1",
     "laravel-mix": "^4.0.15",
+    "material-design-icons-iconfont": "^4.0.5",
     "standard": "^10.0.3",
     "stylint": "^1.5.9",
     "stylus": "^0.54.5",
