--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/runtime": "^7.4.3",
     "axios": "^0.17.1",
     "js-cookie": "^2.2.0",
+    "moment": "^2.24.0",
     "vee-validate": "^2.2.3",
     "vform": "^1.0.0",
     "vue": "^2.6.10",
