--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,7 @@
         ],
         "compile": [
             "php artisan clear-compiled && php artisan optimize",
-            "php artisan migrate"
+            "php artisan migrate:fresh --seed"
         ]
     },
     "config": {
