--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/runtime": "^7.4.4",
     "axios": "^0.18.0",
     "js-cookie": "^2.2.0",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "vee-validate": "^2.2.5",
     "vform": "^1.0.0",
