--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=f3f9dd8de5497ff7799e",
-    "/css/app.css": "/css/app.css?id=2aeaf9546393e1a047db",
-    "/js/app.js.map": "/js/app.js.map?id=0404c0017c99cf32a623",
-    "/js/manifest.js": "/js/manifest.js?id=82c9adcdafd58f25453d",
-    "/js/manifest.js.map": "/js/manifest.js.map?id=19a046cd503464a0acee",
-    "/js/vendor.js": "/js/vendor.js?id=d9bac5b4b393819e4840",
-    "/js/vendor.js.map": "/js/vendor.js.map?id=d17f8ca82d4d56377e64"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
