--- a/composer.json
+++ b/composer.json
@@ -13,19 +13,20 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3",
+        "php": ">=7.3",
         "barryvdh/laravel-dompdf": "^0.8.4",
-        "fideloper/proxy": "~4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "~1.0",
-        "tymon/jwt-auth": "1.0.0-rc.4.1"
+        "ext-json": "*",
+        "fideloper/proxy": "^4.2",
+        "laravel/airlock": "^1.0",
+        "laravel/framework": "^7.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
+        "fzaninotto/faker": "^1.9.1",
         "laravel/dusk": "^5.0",
-        "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~7.0",
+        "laravel/tinker": "^2.2",
+        "mockery/mockery": "^1.3.1",
+        "phpunit/phpunit": "~9.0",
         "squizlabs/php_codesniffer": "^3.2"
     },
     "autoload": {
@@ -52,16 +53,14 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump"
+        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate",
-            "@php artisan jwt:secret --force"
-        ],
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan key:generate --ansi"
         ],
         "compile": [
             "php artisan clear-compiled && php artisan optimize",
