--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,16 @@
     ],
     "require": {
         "php": ">=7.3",
-        "barryvdh/laravel-dompdf": "^0.8.4",
         "ext-json": "*",
+        "barryvdh/laravel-dompdf": "^0.8.4",
         "fideloper/proxy": "^4.2",
         "laravel/airlock": "^1.0",
-        "laravel/framework": "^7.0"
+        "laravel/framework": "^7.0",
+        "laravel/ui": "^2.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "^1.9.1",
-        "laravel/dusk": "^5.0",
         "laravel/tinker": "^2.2",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "~9.0",
