--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "dalholm/laravel-vuetify-spa-admin",
-    "description": "A simple lightweight admin template based on laravel and vuetifyjs. Simple and clean",
+    "name": "melbrothers/richwholesale",
+    "description": "Platform for Richwholesale",
     "keywords": ["spa", "laravel", "vue", "admin", "template", "frontend", "Material design", "vuetifyjs", "vuetify", "Boilerplate"],
     "license": "MIT",
     "type": "project",
@@ -17,6 +17,7 @@
         "ext-json": "*",
         "barryvdh/laravel-dompdf": "^0.8.4",
         "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^1.0",
         "laravel/airlock": "^1.0",
         "laravel/framework": "^7.0",
         "laravel/ui": "^2.0"
@@ -54,7 +55,8 @@
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump"
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover --ansi"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
