--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,13 @@
         "laravel/ui": "^2.0"
     },
     "require-dev": {
-        "filp/whoops": "~2.0",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
+        "laravel/dusk": "^5.9",
         "laravel/tinker": "^2.2",
         "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "~9.0",
-        "squizlabs/php_codesniffer": "^3.2"
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "classmap": [
