--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,9 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=04e99818a5a5f3175e41",
+    "/css/app.css": "/css/app.css?id=199ed08ab58ecb20cd0a",
+    "/js/app.js.map": "/js/app.js.map?id=b4c3885ef51a4b445c1a",
+    "/js/manifest.js": "/js/manifest.js?id=89712bc6d8c588400cae",
+    "/js/manifest.js.map": "/js/manifest.js.map?id=2d58fed8b8c4a064950d",
+    "/js/vendor.js": "/js/vendor.js?id=0eef204129429d41523c",
+    "/js/vendor.js.map": "/js/vendor.js.map?id=1e7de3bba249d76e75c3"
 }
